# erlang-prism

./: README.md  pyproject.toml
beam/: __init__.py  analysis.py  exceptions.py  ext.py  instset.py  module.py  prism.py  sections.py  types.py  utils.py
vim-syntax/: beamc.vim
